--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg bg-info" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -33,7 +34,7 @@
                         aria-expanded="false">
                         Dog breeds
                     </a>
-                    <ul class="dropdown-menu bg-info" >
+                    <ul class="dropdown-menu bg-info">
                         <li><a class="dropdown-item" href="#">Golden Retriever</a></li>
                         <li><a class="dropdown-item" href="#">Poodle</a></li>
                         <li><a class="dropdown-item" href="#">Beagle</a></li>
@@ -118,6 +119,83 @@
                 family member.
             </p>
         </div>
+
+        <div class="accordion" id="accordionExample">
+            <h3>dog breeding purposes</h3>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Working & Utility
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        This is perhaps the oldest and most fundamental purpose of dog breeding. Dogs are bred to assist
+                        humans with specific tasks. This category includes herding dogs (like Border Collies) with their
+                        instinct to control livestock, hunting dogs (like Beagles and Retrievers) with their exceptional
+                        senses of smell and sight, and guard dogs (like German Shepherds and Rottweilers) with their
+                        protective instincts and courage. Other utility roles include sled dogs (Siberian Huskies) and
+                        search and rescue dogs.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Companionship & Therapy
+
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        This modern purpose focuses on breeding dogs for their temperament, docility, and ability to
+                        form strong bonds with humans. These dogs are intended to be family pets and emotional support
+                        animals. Companion dogs like the Cavalier King Charles Spaniel and Pug are bred to be
+                        affectionate and well-suited for living in a home environment. Therapy dogs are often selected
+                        from breeds with calm, patient, and friendly personalities to provide comfort in hospitals,
+                        schools, and nursing homes.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Aesthetics & Show
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        This purpose prioritizes breeding dogs based on specific physical appearances and conformity to
+                        breed standards set by kennel clubs. The goal is to produce dogs that excel in dog shows and
+                        competitions. In conformation shows, dogs are judged on how closely they match the ideal
+                        physical and behavioral traits of their breed. This includes everything from coat color and bone
+                        structure to gait and overall demeanor. Breeds like the Poodle and the Afghan Hound are often
+                        seen in this role.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Health & Conservation
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        This is a more recent and increasingly important purpose, focusing on breeding practices that
+                        prioritize the health, longevity, and genetic diversity of a breed. Responsible breeders use
+                        genetic testing to screen for hereditary diseases common to their breed, such as hip dysplasia
+                        or certain cancers, to produce healthier offspring. For rare or endangered breeds, breeding
+                        efforts are focused on maintaining a healthy gene pool and preventing extinction.
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <div class="row mt-4">
             <h2 id="understd">Understanding Guard Dog Breeds</h2>
@@ -241,12 +319,20 @@
                     <a class="list-group-item list-group-item-action" href="#list-item-4">Pitbull</a>
                 </div>
             </div>
+
         </div>
+
+        <div id="liveAlertPlaceholder"></div>
+        <button type="button" class="btn btn-warning" id="liveAlertBtn">Click For A Random Dog Fact</button>
+
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    <script src="index.js"></script>
 
 </body>
 
