--- a/index.html
+++ b/index.html
@@ -13,61 +13,117 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg fixed-top bg-info" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Offcanvas navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end bg-info" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body ">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#intro">Introduction</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#understd">Understanding Guard Dogs</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dog breeds
+                            </a>
+                            <ul class="dropdown-menu bg-info">
+                                <li><a class="dropdown-item" href="#">Golden Retriever</a></li>
+                                <li><a class="dropdown-item" href="#">Poodle</a></li>
+                                <li><a class="dropdown-item" href="#">Beagle</a></li>
+                                <li><a class="dropdown-item" href="#">Siberian Husky</a></li>
+                                <li><a class="dropdown-item" href="#">Boxer</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link disabled" aria-disabled="true">And So On</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://en.wikipedia.org/wiki/Dog" target="_blank">Learn More</a>
+                        </li>
+                    </ul>
 
-    <nav class="navbar navbar-expand-lg bg-info" data-bs-theme="dark">
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- <nav class="navbar navbar-expand-lg bg-info" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo1.png" alt="Logo" width="100" height="50"
                     class="d-inline-block align-text-top">
 
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#intro">Introduction</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#understd">Understanding Guard Dogs</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Dog breeds
-                    </a>
-                    <ul class="dropdown-menu bg-info">
-                        <li><a class="dropdown-item" href="#">Golden Retriever</a></li>
-                        <li><a class="dropdown-item" href="#">Poodle</a></li>
-                        <li><a class="dropdown-item" href="#">Beagle</a></li>
-                        <li><a class="dropdown-item" href="#">Siberian Husky</a></li>
-                        <li><a class="dropdown-item" href="#">Boxer</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">And So On</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://en.wikipedia.org/wiki/Dog" target="_blank">Learn More</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#intro">Introduction</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#understd">Understanding Guard Dogs</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Dog breeds
+                        </a>
+                        <ul class="dropdown-menu bg-info">
+                            <li><a class="dropdown-item" href="#">Golden Retriever</a></li>
+                            <li><a class="dropdown-item" href="#">Poodle</a></li>
+                            <li><a class="dropdown-item" href="#">Beagle</a></li>
+                            <li><a class="dropdown-item" href="#">Siberian Husky</a></li>
+                            <li><a class="dropdown-item" href="#">Boxer</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" aria-disabled="true">And So On</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://en.wikipedia.org/wiki/Dog" target="_blank">Learn More</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav>
+    </nav> -->
     <div class="container mt-3">
         <h1 class="primary" id="intro">The Enduring Bond: Dogs as Companions, Workers, and Family Members</h1>
         <div class="clearfix">
             <!-- <img src="assets/images/pic01.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="dog" /> -->
-            <div id="carouselExampleAutoplaying" class="carousel slide col-md-6 float-md-end mb-3 ms-md-3"
-                data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="assets/images/pic09.jpg" class="d-block w-100" alt="pic01">
+            <div id="carouselExampleAutoplaying"
+                class="carousel slide container-fluid col-md-6 float-md-end mb-3 ms-md-3" data-bs-ride="carousel">
+                <div class="carousel-inner container-fluid">
+                    <div class="carousel-item active c1">
+                        <img src="assets/images/pic09.jpg" class=" d-block w-100" alt="pic01">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item c2">
                         <img src="assets/images/pic07.jpg" class="d-block w-100" alt="pic02">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item c3">
                         <img src="assets/images/pic08.jpg" class="d-block w-100" alt="pic03">
                     </div>
                 </div>
