--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
         </div>
 
-        <div id="liveAlertPlaceholder"></div>
+        <div id="liveAlertPlaceholder" class="mb-3"></div>
         <button type="button" class="btn btn-warning" id="liveAlertBtn">Click For A Random Dog Fact</button>
 
     </div>
